<resources>
    <!-- STRING API MAPA  -->
    <string name="apiMap" templateMergeStrategy="preserve" translatable="false">AIzaSyDuoKwCsche0ji6mJxsERfnnRwWRVun46Q</string>
    <!-- STRINGS LOGIN   -->
    <string name="app_name">saludAppBC</string>
    <string name="textViewUsername">Correo Electrónico</string>
    <string name="username">Ingrese su correo electrónico</string>
    <string name="textViewPassword">Contraseña</string>
    <string name="password">Ingrese su contraseña</string>
    <string name="forgotPassword"><u>¿Olvidó su contraseña?</u></string>
    <string name="buttonLogin">Ingresar</string>
    <string name="textViewNoAccount">No tengo una cuenta</string>
    <string name="register"><u>¡Regístrate ahora!</u></string>
    <!-- STRINGS REGISTRO Y RECUPERAR CONTRASENA  -->
    <string name="textviewname">Nombre</string>
    <string name="name">Ingrese su nombre</string>
    <string name="textviewlastname">Apellido</string>
    <string name="lastname">Ingrese su apellido</string>
    <string name="buttonforgotpassword">Recuperar mi contraseña</string>
    <string name="textviewGenero">Seleccione su genero</string>
    <string name="generofemenino">Fenemino</string>
    <string name="generomasculino">Masculino</string>
    <string name="generoOtro">Otro</string>
    <string name="buttonSignUp">Crear Cuenta</string>
    <string name="alreadyAccount">Tengo una cuenta</string>
    <string name="buttonsignup2"><u>¡Iniciar Sesión!</u></string>
    <!-- STRINGS HOME -->
    <string name="general">General</string>
    <string name="especialidades">Especialidades</string>
    <string name="odontologia">Odontología</string>
    <string name="homeTitle">Cambia tu vida para mejor</string>
    <string name="homeSubtitle">Agenda una cita y te ayudaremos con \nel problema al que te enfrentas</string>
    <string name="homeSubtitle2">Nuestros servicios</string>
    <string name="infoGeneral">Los mejores especialistas \nen medicina general</string>
    <string name="infoEspecialidades">Los mejores médicos \nespecialistas</string>
    <string name="infoOdontolgia">Los mejores médicos \nen Odontología</string>
    <!-- STRINGS MENU -->
    <string name="salir">Salir</string>
    <string name="ubicacion">Ubicación</string>
    <string name="buscar">Buscar</string>
    <string name="especialistas">Especialistas</string>
    <string name="inicio">Inicio</string>
    <string name="perfil">Perfil</string>
    <!-- STRINGS ODONTOLOGIA   -->
    <string name="odontoTitle">Odontología</string>
    <string name="odontoSubTitle">Contamos con todas las opciones para tu salud dental.</string>
    <string name="odontoSubTitle2">Especialistas</string>
    <string name="odontoProf">Odontólogo</string>
    <string name="odonto1">Dr. Smith Anderson</string>
    <string name="odonto2">Dra. Jessica Riley</string>
    <string name="odonto3">Dra. Samantha Jung</string>
    <string name="odonto4">Dr. Jonathan Otero</string>
    <!-- STRINGS Especialistas   -->
    <string name="espTitle">Especialidades</string>
    <string name="espSubTitle">Médicos con estudios avanzados y capacitación clinica en un área específica.</string>
    <string name="espSubTitle2">Especialistas</string>
    <string name="espProf">Especialista</string>
    <string name="esp1">Dr. Smith Anderson</string>
    <string name="esp2">Dra. Jessica Riley</string>
    <string name="esp3">Dra. Samantha Jung</string>
    <string name="esp4">Dr. Jonathan Otero</string>
    <!-- STRINGS General   -->
    <string name="genTitle">General</string>
    <string name="genSubTitle">Profesionales capacitados para realizar el diagnostico y tratamiento.</string>
    <string name="genSubTitle2">Especialistas</string>
    <string name="genProf">General</string>
    <string name="gen1">Dr. Smith Anderson</string>
    <string name="gen2">Dra. Jessica Riley</string>
    <string name="gen3">Dra. Samantha Jung</string>
    <string name="gen4">Dr. Jonathan Otero</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>