<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_salida"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/inicio"/>
    <item
        android:id="@+id/nav_ubicacion"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_location_24"
        android:title="@string/ubicacion"/>
    <item
        android:id="@+id/nav_buscar"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/buscar"/>
    <item
        android:id="@+id/nav_especialistas"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_people_alt_24"
        android:title="@string/especialistas"/>
</menu>