<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menuSalir"
        android:enabled="true"
        android:title="@string/salir"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        app:showAsAction="ifRoom"></item>

    <item android:id="@+id/menuUbicacion"
        android:title="@string/ubicacion"
        android:icon="@drawable/ic_baseline_location_24"
        app:showAsAction="ifRoom"></item>

    <item android:id="@+id/menuBuscar"
        android:title="@string/buscar"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="ifRoom"></item>

    <item android:id="@+id/menuEspecialistas"
        android:title="@string/especialistas"
        android:icon="@drawable/ic_baseline_people_alt_24"
        app:showAsAction="ifRoom"></item>




</menu>