<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".view.ui.activities.LoginActivity">

    <ImageView
        android:id="@+id/imageViewSaludApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="528dp"
        android:src="@drawable/logosaludapp" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="295dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="225dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="215dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:textColor="@color/secondary_text"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/textViewUsername" />

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/style_border_editext"
                android:ems="10"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/secondary_text"
                android:gravity="center"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/textViewPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/secondary_text"
                android:text="@string/textViewPassword" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/style_border_editext"
                android:ems="10"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/secondary_text"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/bForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="160dp"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/forgotPassword"
                android:textColor="@color/button_text" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="120dp"
        android:fontFamily="@font/roboto_regular"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:backgroundTint="@color/button_text"
        android:textColor="@color/white"
        android:text="@string/buttonLogin"
        android:background="@drawable/style_border_button"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textViewNoAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="750dp"
            android:layout_marginStart="50dp"
            android:textColor="@color/doctor_names"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/textViewNoAccount" />

        <TextView
            android:id="@+id/bCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="750dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/register"
            android:textColor="@color/button_text" />


    </LinearLayout>



</RelativeLayout>