<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".view.ui.fragments.DentistaFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/actionbartoolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/navigation"
        app:titleTextColor="@color/navigation"
        app:logo="@drawable/logosaludapp2">
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:background="@drawable/dentista">

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TitleOdon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/odontoTitle"
            android:textColor="@color/navigation"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_regular"/>

        <TextView
            android:id="@+id/SubTitleOdon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/odontoSubTitle"
            android:textColor="@color/subtitles"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/nuestrosServicios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/odontoSubTitle2"
            android:textColor="@color/navigation"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textSize="18sp"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="1"
            android:rowCount="3">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerDentistas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                >


            </androidx.recyclerview.widget.RecyclerView>


        </GridLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/navigation"
        app:itemTextColor="@color/white"
        app:itemIconTint="@color/white"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_navigation_menu"/>

</LinearLayout>