<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".view.ui.fragments.HomeFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="440dp"
        android:layout_height="238dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/groupofdoctors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="425dp"
        android:layout_height="127dp"
        android:fontFamily="@font/roboto_regular"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/cambiaTuVida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="Cambia tu vida para mejor"
            android:textColor="@color/navigation"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/agendaUnaCita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="Agenda una cita y te ayudaremos con \nel problema que te enfrentas"
            android:textColor="@color/subtitles"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="381dp"
        android:layout_height="266dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nuestrosServicios">

        <TableRow
            android:id="@+id/btnGeneral"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iconoGeneral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/general" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:fontFamily="@font/roboto_regular"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textGeneral"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:text="@string/general"
                    android:textColor="@color/button_text"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textGeneralInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:text="Los mejores especialistas \nen medicina general" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/btnEspecialistas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iconoEspecialistas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/especialidades" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:fontFamily="@font/roboto_regular"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textEspecialidades"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:text="@string/especialidades"
                    android:textColor="@color/button_text"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textEspecialidadesInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:text="Los mejores médicos \nespecialistas" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iconoOdontologia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/odontologia" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:fontFamily="@font/roboto_regular"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textOdontologia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:text="@string/odontologia"
                    android:textColor="@color/button_text"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textOdontologiaInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:text="Los mejores especialistas \nen odontología"
                    android:textColor="@color/secondary_text" />
            </LinearLayout>
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/nuestrosServicios"
        android:layout_width="313dp"
        android:layout_height="27dp"
        android:layout_margin="20dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="99dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="Nuestros Sevicios"
        android:textColor="@color/navigation"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>